--- a/src/themes/solarized-light.css
+++ b/src/themes/solarized-light.css
@@ -7,6 +7,6 @@
   --color-accent:         #217ab8;
   --color-accent-hover:   #1a6fad;
   --color-text-primary:   #5c7077;
-  --color-text-secondary: #839496;
-  --color-text-muted:     #93a1a1;
+  --color-text-secondary: #809294;
+  --color-text-muted:     #809090;
 }
